--- a/style/style-images.css
+++ b/style/style-images.css
@@ -1,4 +1,3 @@
-
 /* ******************************** */
 /* BODY (viewport) */
 /* ******************************** */
@@ -63,7 +62,6 @@ of the viewport */
   padding: 0 12px;
   text-align: center;
 }
-
 .nav-bar .button-blue
 {
   color: #ffffff;
@@ -72,16 +70,16 @@ of the viewport */
 /* Main */
 /* ******************************** */
 .col-logo{
-  margin-top: 8%;
+  margin-top: 6%;
 }
 .col-bar{
-  margin-top: 0%;
+  margin-top: 3%;
 }
 .col-buttons{
   margin-top: 1%;
 }
 .col-bar .search-bar{
-  width: 480px;
+  width: 580px;
   height: 30px;
   padding: 5px 10px;
   border: 0.1px solid #e4e4e4;
@@ -97,7 +95,7 @@ of the viewport */
               0 0 0 1px rgba(0,0,0,0.08);
 }
 .col-bar input{
-  width: 410px;
+  width: 510px;
   border:0px;
   outline: none;
 }
@@ -142,10 +140,24 @@ of the viewport */
   margin-left: 10px;
   margin-right: 10px;
 }
-
 /* ******************************** */
 /* images.html */
 /* *****************************s*** */
+.col-logo{
+  margin-top: 8%;
+}
+.col-bar{
+  margin-top: 0%;
+}
+.col-bar .search-bar{
+  width: 480px;
+}
+.col-bar input{
+  width: 410px;
+}
+/* ************* */
+/* class styling */
+/* ************* */
 .logo-subtext
 {
   color: #4285f4;
